# pardus-parental-control

./: README.md  meson.build  pardus-parental-control  ppc-service  setup.py  tr.org.pardus.parental-control.desktop  update_translations.sh
assets/: style.css
data/: preferences.json  profiles.json  style.css  style_gtk3.css  style_gtk4.css  tr.org.pardus.parental-control.apply-settings.desktop  tr.org.pardus.parental-control.apply.desktop  tr.org.pardus.parental-control.user-check.desktop
dbus/: meson.build  tr.org.pardus.parental-control.conf
debian/: changelog  control  copyright  pardus-parental-control.service  postinst  postrm  ppc-activator.user.service  ppc-agent.user.service  ppc-daemon.service  ppc-session-logger.user.service  preinst  prerm  rules
doc/: ApplicationFiltering.md  README.md  SessionTimeLimit.md  WebsiteFiltering.md
export/: tr.org.pardus.parental-control.agent.desktop
po/: LINGUAS  POTFILES  files  pardus-parental-control.pot  pt.po  tr.po
polkit/: meson.build  tr.org.pardus.parental-control.rules  tr.org.pardus.pkexec.parental-control.policy
service/: systemd.service
src/: Activator.py  ApplicationChooserDialog.py  DBusController.py  DBusManager.py  LinuxUserManager.py  Main.py  MainWindow.py  MalcontentManager.py  NetworkManager.py  NotificationApp.py  PActionRow.py  PPCActivator.py  PPCAgent.py  PPCDaemon.py  PPCService.py  PreferencesWindow.py  ProfileChooserDialog.py  Profiles.py  TimeChooser.py  launch-ppcservice.sh  logout-user.sh  main.py  ppc_disabler.py  session_logger.py  system_preferences_changer.py
(+47 files in other folders)
